# fod

./: LICENSE  README.md  docker-compose.yml  nginx.conf
authentication-service/: Dockerfile  pyproject.toml
authentication-service/authentication_service/: main.py
delete-daemon/: Dockerfile  pyproject.toml
delete-daemon/delete_daemon/: main.py
deleting-service/: Dockerfile  pyproject.toml
deleting-service/deleting_service/: main.py
fod_common/: authentication.py  enums.py  models.py  pyproject.toml  requirements.txt
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Card.css  Card.js
hangref-daemon/: Dockerfile  pyproject.toml
hangref-daemon/hangref_daemon/: main.py
ingest-daemon/: Dockerfile  pyproject.toml
ingest-daemon/ingest_daemon/: main.py
ingest-service/: Dockerfile  pyproject.toml
ingest-service/ingest_service/: main.py
serving-service/: Dockerfile  pyproject.toml
serving-service/serving_service/: main.py
