[tool.poetry]
name = "serving-service"
version = "0.1.0"
description = ""
authors = ["ov3rwrite <ilyabelykh123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
redis = "^5.0.1"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
minio = "^7.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
